--- a/metadata.yaml
+++ b/metadata.yaml
@@ -23,6 +23,7 @@ rights_url: http://creativecommons.org/about/pdm
 subjects:
 - !lcsh 'English language -- Study and teaching'
 - !lcc 'LB'
+- GITenberg
 title: 'Teachers'' Outlines for Studies in English
 
   Based on the Requirements for Admission to College'
